--- a/views/profile/newEvent.hbs
+++ b/views/profile/newEvent.hbs
@@ -5,85 +5,85 @@
     <h1 class="page-title">Create a New Event</h1> 
   </div>
 
-  <form action="" method="POST" id="profileForm" class="form-horizontal">
+  <form action="/profile/events" method="POST" id="profileForm" class="form-horizontal">
     <input type="hidden" name="_csrf" value="{{_csrf}}">
     <!--<h3>Basics</h3>
-    <p>Tell us a little more about you, so we can better optimize your pizza experience!</p>-->
+      <p>Tell us a little more about you, so we can better optimize your pizza experience!</p>-->
 
-    <div class="event-name row">
-      <div class="control-group">
-        <label class="control-label group-title" for="hates">Event Name</label>
-        <div class="controls">
-          <input id="" name="eventName" type="text" placeholder="" class="input-xlarge" value="{{eventName}}">
-        </div>
-      </div>
-    </div>
-    <!-- Date -->
-
-  <div class="row"> 
+      <div class="event-name row">
         <div class="control-group">
-        <label class="group-title control-label">Date</label>
-            <input id="month" name="month" type="text" placeholder="MM" class="input-mini"> <span class="dob-spacer">/</span> <input id="day" name="day" type="text" placeholder="DD" class="input-mini"> <span class="dob-spacer">/</span>
-          <input id="year" name="year" type="text" placeholder="YY" class="input-mini">
-        </div> 
-    </div>
-
-
-    <!-- Time -->
-      <div class="pizza-number-group row">
-        <div class="control-group">
-          <label class="control-label" for="pizzaNumber">Time</label>
+          <label class="control-label group-title" for="hates">Event Name</label>
           <div class="controls">
-            <input id="pizzaNumber" name="pizzaNumber" type="text" class="input-mini" value="{{user.pizza.pizzaNumber}}" required="">:<input id="pizzaNumber" name="pizzaNumber" type="text" class="input-mini" value="{{user.pizza.pizzaNumber}}" required="">  <select>
-              <option value="AM">AM</option>
-              <option value="PM">PM</option>
-            </select>
+            <input id="" name="eventName" type="text" placeholder="" class="input-xlarge" value="{{eventName}}">
           </div>
         </div>
       </div>
-      
-    <!-- Address -->
 
-    <div class="last-name row">
-      <div class="control-group">
-        <label class="control-label group-title" for="hates">Venue Name</label>
-        <div class="controls">
-          <input id="" name="lastName" type="text" placeholder="" class="input-xlarge" value="{{lastName}}">
-        </div>
-      </div>
-    </div>
-    <div class="last-name row">
-      <div class="control-group">
-        <label class="control-label group-title" for="hates">Address</label>
-        <div class="controls">
-          <input id="" name="lastName" type="text" placeholder="" class="input-xlarge" value="{{lastName}}">
-        </div>
-      </div>
-    </div>
-    <div class="last-name row">
-      <div class="control-group">
-        <label class="control-label group-title" for="hates">City</label>
-        <div class="controls">
-          <input id="" name="lastName" type="text" placeholder="" class="input-xlarge" value="{{lastName}}">
-        </div>
-      </div>
-    </div>
-      <div class="pizza-number-group row">
-        <div class="control-group">
-          <label class="control-label" for="pizzaNumber">State</label>
-          <div class="controls">
-            <input id="pizzaNumber" name="pizzaNumber" type="text" class="input-mini" value="{{user.pizza.pizzaNumber}}" required="">
-          </div>
-        </div>
-      </div>
-        <div class="pizza-number-group row">
-        <div class="control-group">
-          <label class="control-label" for="pizzaNumber">Zip Code</label>
-          <div class="controls">
-            <input id="pizzaNumber" name="pizzaNumber" type="text" class="input-mini" value="{{user.pizza.pizzaNumber}}" required="">
-          </div>
-        </div>
-      </div>
+      <!-- Date -->
+
+      <!-- <div class="row">  -->
+        <!-- <div class="control-group"> -->
+          <!-- <label class="group-title control-label">Date</label> -->
+          <!-- <input id="month" name="month" type="text" placeholder="MM" class="input-mini"> <span class="dob-spacer">/</span> <input id="day" name="day" type="text" placeholder="DD" class="input-mini"> <span class="dob-spacer">/</span> -->
+          <!-- <input id="year" name="year" type="text" placeholder="YY" class="input-mini"> -->
+        <!-- </div>  -->
+      <!-- </div> -->
+
+      <!-- [> Time <] -->
+      <!-- <div class="pizza-number-group row"> -->
+        <!-- <div class="control-group"> -->
+          <!-- <label class="control-label" for="pizzaNumber">Time</label> -->
+          <!-- <div class="controls"> -->
+            <!-- <input id="pizzaNumber" name="pizzaNumber" type="text" class="input-mini" value="{{user.pizza.pizzaNumber}}" required="">:<input id="pizzaNumber" name="pizzaNumber" type="text" class="input-mini" value="{{user.pizza.pizzaNumber}}" required="">  <select> -->
+              <!-- <option value="AM">AM</option> -->
+              <!-- <option value="PM">PM</option> -->
+            <!-- </select> -->
+          <!-- </div> -->
+        <!-- </div> -->
+      <!-- </div> -->
+
+      <!-- [> Address <] -->
+
+      <!-- <div class="last-name row"> -->
+        <!-- <div class="control-group"> -->
+          <!-- <label class="control-label group-title" for="hates">Venue Name</label> -->
+          <!-- <div class="controls"> -->
+            <!-- <input id="" name="lastName" type="text" placeholder="" class="input-xlarge" value="{{lastName}}"> -->
+          <!-- </div> -->
+        <!-- </div> -->
+      <!-- </div> -->
+      <!-- <div class="last-name row"> -->
+        <!-- <div class="control-group"> -->
+          <!-- <label class="control-label group-title" for="hates">Address</label> -->
+          <!-- <div class="controls"> -->
+            <!-- <input id="" name="lastName" type="text" placeholder="" class="input-xlarge" value="{{lastName}}"> -->
+          <!-- </div> -->
+        <!-- </div> -->
+      <!-- </div> -->
+      <!-- <div class="last-name row"> -->
+        <!-- <div class="control-group"> -->
+          <!-- <label class="control-label group-title" for="hates">City</label> -->
+          <!-- <div class="controls"> -->
+            <!-- <input id="" name="lastName" type="text" placeholder="" class="input-xlarge" value="{{lastName}}"> -->
+          <!-- </div> -->
+        <!-- </div> -->
+      <!-- </div> -->
+      <!-- <div class="pizza-number-group row"> -->
+        <!-- <div class="control-group"> -->
+          <!-- <label class="control-label" for="pizzaNumber">State</label> -->
+          <!-- <div class="controls"> -->
+            <!-- <input id="pizzaNumber" name="pizzaNumber" type="text" class="input-mini" value="{{user.pizza.pizzaNumber}}" required=""> -->
+          <!-- </div> -->
+        <!-- </div> -->
+      <!-- </div> -->
+      <!-- <div class="pizza-number-group row"> -->
+        <!-- <div class="control-group"> -->
+          <!-- <label class="control-label" for="pizzaNumber">Zip Code</label> -->
+          <!-- <div class="controls"> -->
+            <!-- <input id="pizzaNumber" name="pizzaNumber" type="text" class="input-mini" value="{{user.pizza.pizzaNumber}}" required=""> -->
+          <!-- </div> -->
+        <!-- </div> -->
+      <!-- </div> -->
 
       <!-- submit -->
       <div class="control-group submit-div">
@@ -93,7 +93,7 @@
         </div>
       </div>
 
-    </fieldset>
+      </fieldset>
   </form>
 
 </div> <!--cols main-->
