--- a/views/partials/recommendation.hbs
+++ b/views/partials/recommendation.hbs
@@ -60,4 +60,6 @@
 			<p><strong>Nobody at your party likes</strong><span class="label label-default">Bacon</span></p>
 		</div>
 	</div>
+	<div class="buy-now">
+<a href="#fakelink" class="btn btn-block btn-lg btn-primary buy-btn">Place your order</a>
 </div>
