Add success modal

--- a/views/layouts/profile.hbs
+++ b/views/layouts/profile.hbs
@@ -56,7 +56,15 @@
         </div>
       </div>
     </nav>
-
+<div class="success">
+  <div class="x-success">
+  <a href="#">&times;</a>
+  </div>
+<h1>SUCCESS</h1>
+<h3>Your order has been placed with Domino's located at Grand Central Shopping Center.</h3>
+<h4>Please check your email for payment information and next steps.</h4>
+<a href="#" class="btn btn-block btn-lg btn-primary success-btn">close</a>
+</div>
    <!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
