Add logic for buy overlay

--- a/views/layouts/profile.hbs
+++ b/views/layouts/profile.hbs
@@ -56,31 +56,15 @@
         </div>
       </div>
     </nav>
-<div class="success">
+<div class="success" id="success">
   <div class="x-success">
-  <a href="#">&times;</a>
+  <a href="#" class="close-success">&times;</a>
   </div>
 <h1>SUCCESS</h1>
 <h3>Your order has been placed with Domino's located at Grand Central Shopping Center.</h3>
 <h4>Please check your email for payment information and next steps.</h4>
-<a href="#" class="btn btn-block btn-lg btn-primary success-btn">close</a>
+<a href="#" class="btn btn-block btn-lg btn-primary success-btn close-success">close</a>
 </div>
-   <!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">About Pizzafy</h4>
-          </div>
-          <div class="modal-body">
-            <p>Stuff here!</p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          </div>
-        </div>
-      </div>
-    </div> -->
 
     {{{body}}}
 
