--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -250,7 +250,8 @@ body {
 .navbar {
 	z-index: -1;
 }
-.success {
+
+#success {
 	position: fixed;
 	min-height: 100vh;
 	width: 100%;
@@ -261,6 +262,7 @@ body {
 	color: white;
 	padding: 10% 20%;
 	text-align: center;
+  display: none;
 }
 
 .success h1, .success h3, .success h4 {
