--- a/views/partials/socialSignUp.hbs
+++ b/views/partials/socialSignUp.hbs
@@ -8,8 +8,13 @@
 
     <div class="form-group">
       <a href="/auth/facebook" class="btn btn-block btn-lg btn-primary" style="width: 100%">Join With Facebook</a>
+    </div>
+
+    <div class="form-group">
+      <a href="/auth/meetup" class="btn btn-block btn-lg btn-danger" style="width: 100%">Join With Meetup</a>
       <h6>or</h6>
     </div>
+
     <form action="/auth/local/signup" method="POST">
       <div class="form-group">
         <input type="text" name="email" class="form-control login-field" value="" placeholder="Enter your email" id="login-name" />
