--- a/views/partials/socialSignUp.hbs
+++ b/views/partials/socialSignUp.hbs
@@ -11,6 +11,11 @@
     </div>
 
     <div class="form-group">
+      <a href="/auth/eventbrite" class="btn btn-block btn-lg btn-warning" style="width: 100%">Join With Eventbrite</a>
+    </div>
+
+
+    <div class="form-group">
       <a href="/auth/meetup" class="btn btn-block btn-lg btn-danger" style="width: 100%">Join With Meetup</a>
       <h6>or</h6>
     </div>
