--- a/views/partials/recommendation.hbs
+++ b/views/partials/recommendation.hbs
@@ -5,14 +5,13 @@
     <div class="col-sm-6 col-md-3">
       <div class="thumbnail">
         <div class="pizza-container">
-          <p class="half-circle"></p><p class="half-circle-2"></p>
+          <img src="/images/chickenbacon.png" class="rec-img" />
         </div>
         <div class="caption">
           <h3>x<span class="pizza-count">1</span></h3>
-          <span class="label label-primary">peppers + onions</span>
-          <span class="label label-info">chicken + onion</span>
+          <span class="label label-info">chicken + bacon</span>
+         <span class="label label-empty">none none none</span>
           <p></p>
-          <p><strong>thin crust</strong></p>
           <p class="diet-empty"><strong>empty</strong></p>
         </div>
       </div>
@@ -20,14 +19,13 @@
     <div class="col-sm-6 col-md-3">
       <div class="thumbnail">
         <div class="pizza-container">
-          <p class="full-circle"></p>
+          <img src="/images/mushroomstomatoes.png" class="rec-img" />
         </div>
         <div class="caption">
           <h3>x<span class="pizza-count">1</span></h3>
-          <span class="label label-info">spinach + olives</span>
-          <p></p>
+          <span class="label label-info">mushrooms + tomatoes</span>
           <span class="label label-empty">none none none</span>
-          <p><strong>regular crust</strong></p>
+           <p></p>
           <p><strong>vegan</strong></p>
         </div>
       </div>
@@ -35,14 +33,27 @@
     <div class="col-sm-6 col-md-3">
       <div class="thumbnail">
         <div class="pizza-container">
-          <p class="full-circle"></p>
+          <img src="/images/halfpizza.png" class="rec-img" />
         </div>
         <div class="caption">
           <h3>x<span class="pizza-count">1</span></h3>
-          <span class="label label-info">pepperoni + mushrooms</span>
-          <span class="label label-empty">none none none</span>
+          <span class="label label-info">bacon + olives</span>
+          <span class="label label-primary">bacon + chicken</span>
           <p></p>
-          <p><strong>deep dish crust</strong></p>
+          <p><strong>gluten-free</strong></p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6 col-md-3">
+      <div class="thumbnail">
+        <div class="pizza-container">
+          <img src="/images/pepperonionion.png" class="rec-img" />
+        </div>
+        <div class="caption">
+          <h3>x<span class="pizza-count">3</span></h3>
+          <span class="label label-info">pepperoni + onions</span>
+          <span class="label label-empty">none none none</span>
+           <p></p>
           <p class="diet-empty"><strong>empty</strong></p>
         </div>
       </div>
@@ -51,13 +62,13 @@
 
   <div class="row bottom">
     <div class="order-total col-md-6">
-      <h4>Total Pizzas for this order <span class="label label-default">3</span></h4>
+      <h4>Total Pizzas for this order <span class="label label-default">6</span></h4>
     </div>
     <div class="food-thought col-md-6">
       <h4>Food for Thought</h4>
-      <p><strong>Average Pizza Number of this party</strong><span class="label label-default">4</span></p>
-      <p><strong>Favorite topping at this party</strong><span class="label label-default">Onions</span></p>
-      <p><strong>Nobody at your party likes</strong><span class="label label-default">Bacon</span></p>
+      <p><strong>Average Pizza Number of this party</strong><span class="label label-default">3</span></p>
+      <p><strong>Favorite topping at this party</strong><span class="label label-default">Bacon</span></p>
+      <p><strong>Nobody at your party likes</strong><span class="label label-default">Peppers</span></p>
     </div>
   </div>
   <div class="buy-now">
