--- a/views/profile/singleEvent.hbs
+++ b/views/profile/singleEvent.hbs
@@ -7,10 +7,10 @@
 
   <div class="event-webhook">
     <h6><strong>Eventbrite Web Hook</strong></h6>
-    <a href="/profile/connect/eventbrite?eventId={{eventId}}">
-      <button id="profileSubmit" name="submit" class="btn btn-warning" style="float: right;">Connect To Eventbrite</button>
-    </a>
     <textarea placeholder="" class="input-xlarge" value="" disabled>{{webhookHost}}{{event.webhookUrl}}</textarea>
+     <a href="/profile/connect/eventbrite?eventId={{eventId}}">
+      <button id="profileSubmit" name="submit" class="btn btn-warning connect-hook" style="">Connect To Eventbrite</button>
+    </a>
   </div>
 
   <div class="event-details">
