--- a/views/partials/socialSignUp.hbs
+++ b/views/partials/socialSignUp.hbs
@@ -1,6 +1,6 @@
 <div class="login-form">
 
-  <div class="login-form">
+  <div class="login-container">
 
     <!-- <div class="form-group"> -->
       <!-- <a href="/auth/twitter" class="btn btn-block btn-lg btn-info" style="width: 100%">Join With Twitter</a> -->
