--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -8,7 +8,7 @@
 }
 
 .social-button {
-  width: 100%;
+	width: 100%;
 }
 
 img {
@@ -33,16 +33,18 @@ img {
 }
 
 .profile-pic {
-	border-radius: 50%;
-	width: auto;
+	display: inline-block;
+	width: 100px;
 	height: 100px;
+	border-radius: 50%;
+	overflow: hidden;
 	padding: 5px;
 	border: 1px solid #f7f7f7;
-	display: inline-block;
+	vertical-align: inherit;
 }
 
 input:disabled, textarea:disabled {
-  background: #cfcfcf;
+	background: #cfcfcf;
 }
 
 .page-title {
@@ -178,28 +180,28 @@ h3:first-of-type {
 }
 
 .full-circle {
-    height:150px;
-    width:150px;
-    display: inline-block;
-    -webkit-border-radius:75px;
-    -moz-border-radius:75px;
+		height:150px;
+		width:150px;
+		display: inline-block;
+		-webkit-border-radius:75px;
+		-moz-border-radius:75px;
 }
 
 .half-circle {
-    height:150px;
-    width: 75px;
-    -moz-border-radius: 150px 0 0 150px;
-    border-radius: 150px 0 0 150px;
-    display: inline-block;
-    margin-right: 5px;
+		height:150px;
+		width: 75px;
+		-moz-border-radius: 150px 0 0 150px;
+		border-radius: 150px 0 0 150px;
+		display: inline-block;
+		margin-right: 5px;
 }
 
 .half-circle-2 {
-    height:150px;
-    width: 75px;
-   border-radius: 0 150px 150px 0;
-    border-radius: 0 150px 150px 0;
-    display: inline-block;
+		height:150px;
+		width: 75px;
+	 border-radius: 0 150px 150px 0;
+		border-radius: 0 150px 150px 0;
+		display: inline-block;
 }
 
 .half-circle, .caption .label-primary {
@@ -258,7 +260,7 @@ body {
 	color: white;
 	padding: 10% 20%;
 	text-align: center;
-  display: none;
+	display: none;
 }
 
 .success h1, .success h3, .success h4 {
