--- a/views/profile/form.hbs
+++ b/views/profile/form.hbs
@@ -2,8 +2,8 @@
   {{> flash}}
 
   <div class="row page-header">
-    <img src="{{user.profile.picture}}" class="profile-pic" alt="{{user.profile.displayName}} | Pizzafy" />  
-    <h1 class="page-title">{{#if user.profile.firstName}}{{user.profile.firstName}}'s{{else}}My{{/if}} Pizza Profile</h1> 
+    <div class="profile-pic" style="background-image: url('{{user.profile.picture}}'); background-size: cover"></div>
+    <h1 class="page-title">{{#if user.profile.firstName}}{{user.profile.firstName}}'s{{else}}My{{/if}} Pizza Profile</h1>
     <!-- Not using this for now <button type="button" class="badge pizza-number" data-toggle="tooltip" data-placement="top" title="Your Pizza Number: How many slices of pizza you eat">2</button> -->
   </div>
 
@@ -129,7 +129,7 @@
       <div class="notes row">
         <div class="control-group">
           <label class="control-label" for="notes"></label>
-          <div class="controls">                     
+          <div class="controls">
             <textarea id="notes" name="notes">{{notes}}</textarea>
           </div>
         </div>
