--- a/views/layouts/profile.hbs
+++ b/views/layouts/profile.hbs
@@ -73,7 +73,7 @@
       ================================================== -->
       <!-- Placed at the end of the document so the pages load faster -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-      <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+      <!-- // <script src="/vendor/bootstrap/js/bootstrap.min.js"></script> -->
       <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
       <script src="/vendor/js/ie10-viewport-bug-workaround.js"></script>
       <script src="/vendor/flat-ui/dist/js/flat-ui.min.js"></script>
