--- a/views/profile/singleEvent.hbs
+++ b/views/profile/singleEvent.hbs
@@ -1,15 +1,33 @@
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 main profile">
   {{> flash}}
 
   <div class="row page-header">
-    <h1 class="page-title">{{event.name}} <span class="label label-warning">Host</span></h1> 
+    <h1 class="page-title">{{event.name}} <span class="label label-warning">Host</span></h1>
   </div>
 
   <div class="event-webhook">
     <h6><strong>Eventbrite Web Hook</strong></h6>
     <textarea placeholder="" class="input-xlarge" value="" disabled>{{webhookHost}}{{event.webhookUrl}}</textarea>
      <a href="/profile/connect/eventbrite?eventId={{eventId}}">
-      <button id="profileSubmit" name="submit" class="btn btn-warning connect-hook" style="">Connect To Eventbrite</button>
+      <button id="profileSubmit" data-toggle="modal" data-target="#myModal" class="btn btn-warning connect-hook" style="">Connect To Eventbrite</button>
     </a>
   </div>
 
