remove link outside of button

--- a/views/profile/singleEvent.hbs
+++ b/views/profile/singleEvent.hbs
@@ -26,9 +26,8 @@
   <div class="event-webhook">
     <h6><strong>Eventbrite Web Hook</strong></h6>
     <textarea placeholder="" class="input-xlarge" value="" disabled>{{webhookHost}}{{event.webhookUrl}}</textarea>
-     <a href="/profile/connect/eventbrite?eventId={{eventId}}">
-      <button id="profileSubmit" data-toggle="modal" data-target="#myModal" class="btn btn-warning connect-hook" style="">Connect To Eventbrite</button>
-    </a>
+    <button id="profileSubmit" data-toggle="modal" data-target="#myModal" class="btn btn-warning connect-hook" style="">Connect To Eventbrite</button>
+    <!-- <a href="/profile/connect/eventbrite?eventId={{eventId}}"></a> -->
   </div>
 
   <div class="event-details">
