--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -1,3 +1,3 @@
-<h1>Experience the crowdsourced pizza party.</h1>
+<h1 class="landing-h1">Experience the crowdsourced pizza party.</h1>
 <h4>Your slices. Your toppings. Your pizza.</h4>
 {{> socialSignUp}}
