--- a/views/profile/singleEvent.hbs
+++ b/views/profile/singleEvent.hbs
@@ -26,7 +26,9 @@
   <div class="event-webhook">
     <h6><strong>Eventbrite Web Hook</strong></h6>
     <textarea placeholder="" class="input-xlarge" value="" disabled>{{webhookHost}}{{event.webhookUrl}}</textarea>
-    <button id="profileSubmit" data-toggle="modal" data-target="#myModal" class="btn btn-warning connect-hook" style="">Connect To Eventbrite</button>
+    <a href="/profile/connect/eventbrite?eventId={{eventId}}">
+      <button id="profileSubmit" name="submit" class="btn btn-warning connect-hook" style="">Connect To Eventbrite</button>
+    </a>
     <!-- <a href="/profile/connect/eventbrite?eventId={{eventId}}"></a> -->
   </div>
 
